--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "element-plus": "^2.2.12",
+    "vue": "^3.0.0",
+    "vue-router": "^4.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
