--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "core-js": "^3.6.5",
     "element-plus": "^2.2.12",
     "vue": "^3.0.0",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vxe-table": "^4.3.0-beta.3",
+    "xe-utils": "^3.5.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
